# solana-tx-p2p/src/model/mod.rs
@@ -1,5 +1,6 @@
 mod peer;
 
 pub use self::peer::{
-    CompiledInstructionForUtoipa, MessageForUtoipa, MessageHeaderForUtoipa, TransactionForUtoipa,
+    CompiledInstructionForUtoipa, MessageForUtoipa, MessageHeaderForUtoipa, TransactionDetail,
+    TransactionForUtoipa,
 };
