# solana-tx-p2p/src/web/controller/peer/v1.rs
@@ -1,8 +1,11 @@
-use axum::{Extension, Json};
+use axum::{extract::Path, Extension, Json};
 use solana_sdk::transaction::Transaction;
 
 use crate::{
-    app_state::AppState, model::TransactionForUtoipa, service::PeerService, web::error::Result,
+    app_state::AppState,
+    model::{TransactionDetail, TransactionForUtoipa},
+    service::PeerService,
+    web::error::Result,
 };
 
 /// Discovery peers
@@ -61,4 +64,28 @@ where
     let signatures = app_state.peer_service().list_relayed_transactions().await?;
 
     Ok(Json(signatures))
+}
+
+/// Get relayed transaction
+#[utoipa::path(
+    post,
+    path = "/api/v1/peer/relayed-transaction/{signature}",
+    responses(
+        (status = 200, body = TransactionDetail),
+        (status = 500, description = "Internal server error")
+    ),
+    params((
+        "signature" = String, Path, description = "Signature of transaction")
+    )
+)]
+pub async fn get_relayed_transaction<S>(
+    Extension(app_state): Extension<S>,
+    Path(signature): Path<String>,
+) -> Result<Json<TransactionDetail>>
+where
+    S: AppState + Clone + Send + Sync + 'static,
+{
+    let tx = app_state.peer_service().get_transaction(&signature).await?;
+
+    Ok(Json(tx))
 }
